--- a/basilisk/themes/windows/browser.css
+++ b/basilisk/themes/windows/browser.css
@@ -2170,8 +2170,8 @@ toolbarbutton.bookmark-item[dragover="true"][open="true"] {
 
 %include ../shared/fullscreen/warning.inc.css
 %include ../shared/ctrlTab.inc.css
-%include ../../../../devtools/client/themes/responsivedesign.inc.css
-%include ../../../../devtools/client/themes/commandline.inc.css
+%include ../../../platform/devtools/client/themes/responsivedesign.inc.css
+%include ../../../platform/devtools/client/themes/commandline.inc.css
 %include ../shared/plugin-doorhanger.inc.css
 
 notification.pluginVulnerable > .notification-inner > .messageCloseButton {
