--- a/basilisk/themes/shared/incontentprefs/preferences.inc.css
+++ b/basilisk/themes/shared/incontentprefs/preferences.inc.css
@@ -236,13 +236,13 @@ treecol {
 
 /* Privacy pane */
 
-.doNotTrackLearnMore {
+.GPCLearnMore {
   margin-inline-start: calc(1em + 30px);
   margin-bottom: 1em;
   font-weight: normal;
 }
 
-.doNotTrackLearnMore > label {
+.GPCLearnMore > label {
   font-size: 1em !important;
   margin-left: 0;
 }
