No Issue - Remove stray semicolon

--- a/basilisk/themes/windows/browser.css
+++ b/basilisk/themes/windows/browser.css
@@ -127,7 +127,7 @@ toolbar:-moz-lwtheme {
   #navigator-toolbox {
     /* Override the global style for Windows 10 that adds a bottom border */
     border-bottom: none;
-  };
+  }
 }
 
 #navigator-toolbox::after {
