Port Pale Moon version of Tab fading Backport of roytam1/UXP commit https://github.com/roytam1/UXP/commit/2a32b18f465a8d068d1b1866d027374b4706cd5a.patch

--- a/basilisk/base/content/browser.css
+++ b/basilisk/base/content/browser.css
@@ -187,6 +187,16 @@ tabbrowser {
   transition: transform 200ms ease-out;
 }
 
+@supports -moz-bool-pref("browser.tabs.fadeLabels") {
+  .tabbrowser-tab .tab-text[_is_cropped] {
+    mask-image: linear-gradient(to left, transparent, black 2em);
+  }
+
+  .tabbrowser-tab .tab-text[_is_cropped]:-moz-locale-dir(rtl) {
+    mask-image: linear-gradient(to right, transparent, black 2em);
+  }
+}
+
 .new-tab-popup,
 #alltabs-popup {
   -moz-binding: url("chrome://browser/content/tabbrowser.xml#tabbrowser-alltabs-popup");
