--- a/basilisk/themes/shared/ctrlTab.inc.css
+++ b/basilisk/themes/shared/ctrlTab.inc.css
@@ -42,6 +42,16 @@
   border-radius: .5em;
 }
 
+@supports -moz-bool-pref("browser.tabs.fadeLabels") {
+  .ctrlTab-preview-inner label[_is_cropped] {
+    mask-image: linear-gradient(to left, transparent, black 2em);
+  }
+
+  .ctrlTab-preview-inner label[_is_cropped]:-moz-locale-dir(rtl) {
+    mask-image: linear-gradient(to right, transparent, black 2em);
+  }
+}
+
 .ctrlTab-preview:not(#ctrlTab-showAll) > * > .ctrlTab-preview-inner {
   margin: -10px -10px 0;
 }
