un-prefix -moz-user-select
See https://repo.palemoon.org/moonchildproductions/uxp/issues/2106

--- a/basilisk/themes/shared/incontentprefs/preferences.inc.css
+++ b/basilisk/themes/shared/incontentprefs/preferences.inc.css
@@ -13,13 +13,13 @@
 }
 
 * {
-  -moz-user-select: text;
+  user-select: text;
 }
 
 button,
 treecol {
   /* override the * rule */
-  -moz-user-select: none;
+  user-select: none;
 }
 
 #engineList treechildren::-moz-tree-image(engineShown, checked),
@@ -337,7 +337,7 @@ description > html|a {
 
 #dialogTitle {
   text-align: center;
-  -moz-user-select: none;
+  user-select: none;
 }
 
 .close-icon {
