Basilisk-Dev/Basilisk#124 - reimplement container tabs

--- a/basilisk/base/content/browser.css
+++ b/basilisk/base/content/browser.css
@@ -597,6 +597,25 @@ toolbar:not(#TabsToolbar) > #personal-bookmarks {
 #identity-icon-labels {
   max-width: 18em;
 }
+
+#userContext-icons {
+  margin-inline-start: 6px;
+  padding-inline-start: 6px;
+  color: var(--usercontext-color, currentColor);
+}
+
+#userContext-label {
+  color: var(--usercontext-color, currentColor);
+  font-weight: 600;
+}
+
+#userContext-indicator {
+  width: 16px;
+  height: 16px;
+  margin-inline-start: 4px;
+  filter: url(chrome://browser/skin/filters.svg#fill);
+  fill: var(--usercontext-color, currentColor);
+}
 @media (max-width: 700px) {
   #urlbar-container {
     min-width: 45ch;
