--- a/basilisk/components/preferences/containers.css
+++ b/basilisk/components/preferences/containers.css
@@ -10,6 +10,24 @@
   margin-inline-start: 8px;
 }
 
+#containerDetails > grid {
+  margin: 6px 10px 8px;
+}
+
+#containerDetails row > label {
+  margin-inline-start: 6px;
+}
+
+#containerName,
+#containerIcon,
+#containerColor {
+  -moz-box-flex: 1;
+  margin-inline-start: 8px;
+  margin-inline-end: 0;
+  min-width: 0;
+  width: 0;
+}
+
 #containersActionButtons {
   padding-bottom: 6px;
 }
