Replace -moz-appearance with appearance

--- a/basilisk/themes/linux/browser.css
+++ b/basilisk/themes/linux/browser.css
@@ -49,7 +49,7 @@
 }
 
 #navigator-toolbox {
-  -moz-appearance: none;
+  apperance: none;
   background-color: transparent;
   border-top: none;
 }
@@ -74,7 +74,7 @@
 }
 
 #navigator-toolbox > toolbar:not(:-moz-lwtheme):not(#toolbar-menubar):not(#TabsToolbar) {
-  -moz-appearance: none;
+  apperance: none;
   border-style: none;
   background-color: -moz-Dialog;
 }
@@ -137,7 +137,7 @@ toolbarbutton.bookmark-item:not(.subviewbutton):not(:hover):not(:active):not([op
 }
 
 toolbarbutton.bookmark-item:not(.subviewbutton) {
-  -moz-appearance: none;
+  apperance: none;
   border: 1px solid transparent;
   border-radius: 2px;
   transition-property: background-color, border-color;
@@ -362,7 +362,7 @@ menuitem.bookmark-item {
 .findbar-button,
 :-moz-any(#TabsToolbar, #nav-bar) .toolbarbutton-1 > .toolbarbutton-menubutton-button,
 :-moz-any(#TabsToolbar, #nav-bar) .toolbarbutton-1 {
-  -moz-appearance: none;
+  apperance: none;
 }
 
 :-moz-any(#TabsToolbar, #nav-bar) .toolbarbutton-1[open="true"],
@@ -604,7 +604,7 @@ menuitem.bookmark-item {
 
 #urlbar,
 .searchbar-textbox {
-  -moz-appearance: none;
+  apperance: none;
   padding: 0;
   border: 1px solid var(--urlbar-border-color);
   border-radius: 2px;
@@ -633,7 +633,7 @@ menuitem.bookmark-item {
 }
 
 .urlbar-textbox-container {
-  -moz-appearance: none;
+  apperance: none;
   -moz-box-align: stretch;
 }
 
@@ -650,7 +650,7 @@ menuitem.bookmark-item {
 }
 
 .urlbar-history-dropmarker {
-  -moz-appearance: toolbarbutton-dropdown;
+  apperance: toolbarbutton-dropdown;
   transition: opacity 0.15s ease;
 }
 
@@ -721,7 +721,7 @@ menuitem.bookmark-item {
 }
 
 #urlbar-zoom-button {
-  -moz-appearance: none;
+  apperance: none;
   margin: 0 3px;
   font-size: .8em;
   padding: 0 8px;
@@ -758,7 +758,7 @@ menuitem.bookmark-item {
 }
 
 #urlbar-search-settings {
-  -moz-appearance: none;
+  apperance: none;
   -moz-user-focus: ignore;
   color: GrayText;
   margin: 0;
@@ -776,7 +776,7 @@ menuitem.bookmark-item {
 }
 
 #urlbar-search-splitter {
-  -moz-appearance: none;
+  apperance: none;
   width: 8px;
   margin-inline-start: -4px;
 }
@@ -970,7 +970,7 @@ html|span.ac-emphasize-text-url {
 #urlbar-go-button,
 #urlbar-reload-button,
 #urlbar-stop-button {
-  -moz-appearance: none;
+  apperance: none;
   list-style-image: url("chrome://browser/skin/reload-stop-go.png");
   padding: 0 9px;
   margin-inline-start: 5px;
@@ -1101,7 +1101,7 @@ html|span.ac-emphasize-text-url {
 /* bookmarks menu-button */
 
 #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker {
-  -moz-appearance: none !important;
+  apperance: none !important;
   -moz-box-align: center;
 }
 
@@ -1191,7 +1191,7 @@ html|span.ac-emphasize-text-url {
 }
 
 #TabsToolbar:not(:-moz-lwtheme) {
-  -moz-appearance: menubar;
+  apperance: menubar;
   color: -moz-menubartext;
 }
 
@@ -1263,12 +1263,12 @@ html|span.ac-emphasize-text-url {
 /* Tabbrowser arrowscrollbox arrows */
 .tabbrowser-arrowscrollbox > .scrollbutton-up > .toolbarbutton-icon,
 .tabbrowser-arrowscrollbox > .scrollbutton-down > .toolbarbutton-icon {
-  -moz-appearance: none;
+  apperance: none;
 }
 
 .tabbrowser-arrowscrollbox > .scrollbutton-up,
 .tabbrowser-arrowscrollbox > .scrollbutton-down {
-  -moz-appearance: none;
+  apperance: none;
   list-style-image: url("chrome://browser/skin/tabbrowser/tab-arrow-left.png");
   margin: 0 0 var(--tab-toolbar-navbar-overlap);
 }
@@ -1463,7 +1463,7 @@ notification.pluginVulnerable > .notification-inner > .messageCloseButton:not(:h
 }
 
 #main-window[customize-entered] #TabsToolbar {
-  -moz-appearance: none;
+  apperance: none;
   background-clip: padding-box;
   border-right: 3px solid transparent;
   border-left: 3px solid transparent;
