--- a/basilisk/themes/linux/searchbar.css
+++ b/basilisk/themes/linux/searchbar.css
@@ -186,7 +186,7 @@ menuitem[cmd="cmd_clearhistory"][disabled] {
 }
 
 .searchbar-engine-one-off-item {
-  -moz-appearance: none;
+  apperance: none;
   display: inline-block;
   border: none;
   min-width: 48px;
@@ -244,7 +244,7 @@ menuitem[cmd="cmd_clearhistory"][disabled] {
 }
 
 .addengine-item {
-  -moz-appearance: none;
+  apperance: none;
   background-color: transparent;
   color: inherit;
   border: none;
@@ -320,7 +320,7 @@ menuitem[cmd="cmd_clearhistory"][disabled] {
 }
 
 .search-setting-button {
-  -moz-appearance: none;
+  apperance: none;
   margin: 0;
   min-height: 32px;
 }
