--- a/basilisk/themes/linux/syncSetup.css
+++ b/basilisk/themes/linux/syncSetup.css
@@ -3,7 +3,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 wizard {
-  -moz-appearance: none;
+  apperance: none;
   width: 55em;
   height: 45em;
   padding: 0;
@@ -11,7 +11,7 @@ wizard {
 }
 
 .wizard-page-box {
-  -moz-appearance: none;
+  apperance: none;
   padding-left: 0;
   padding-right: 0;
   margin: 0;
@@ -26,7 +26,7 @@ wizardpage {
 }
 
 .wizard-header {
-  -moz-appearance: none;
+  apperance: none;
   border: none;
   padding: 2em 0 1em 0;
   text-align: center;
