--- a/basilisk/themes/osx/pageInfo.css
+++ b/basilisk/themes/osx/pageInfo.css
@@ -31,7 +31,7 @@ textbox {
   border: none;
   padding: 0px;
   margin-top: 1px;
-  -moz-appearance: none;
+  apperance: none;
 }
 
 textbox.header {
