--- a/basilisk/themes/windows/browser-aero.css
+++ b/basilisk/themes/windows/browser-aero.css
@@ -14,7 +14,7 @@
 @media (-moz-windows-default-theme) {
   .sidebar-header,
   #sidebar-header {
-    -moz-appearance: none;
+    apperance: none;
     border-bottom: none;
     text-shadow: none;
   }
@@ -71,7 +71,7 @@
 
 @media (-moz-windows-compositor) {
   #main-window {
-    -moz-appearance: -moz-win-glass;
+    apperance: -moz-win-glass;
   }
 
 
@@ -79,7 +79,7 @@
    * the sidebar, if the sidebar is open the accent color bleeds through in
    * the titlebar */
   #browser {
-    -moz-appearance: -moz-win-exclude-glass;
+    apperance: -moz-win-exclude-glass;
   }
 
   @media (-moz-os-version: windows-win10) {
@@ -221,7 +221,7 @@
 
     #titlebar-buttonbox,
     .titlebar-button {
-      -moz-appearance: none !important;
+      apperance: none !important;
     }
 
     .titlebar-button {
@@ -436,7 +436,7 @@
 
     #main-window {
       background-color: transparent;
-      -moz-appearance: -moz-win-borderless-glass;
+      apperance: -moz-win-borderless-glass;
     }
 
     /* These should be hidden w/ glass enabled. Windows draws its own buttons. */
@@ -448,11 +448,11 @@
      * win7 we want to make sure they are "glassy", so we can't use
      * #browser as the exclude-glass container. We use #appcontent instead. */
     #browser {
-      -moz-appearance: none;
+      apperance: none;
     }
 
     #appcontent {
-      -moz-appearance: -moz-win-exclude-glass;
+      apperance: -moz-win-exclude-glass;
     }
   }
 
@@ -535,7 +535,7 @@
   }
 
   #main-window[sizemode=fullscreen]:not(:-moz-lwtheme) {
-    -moz-appearance: none;
+    apperance: none;
     background-color: #556;
   }
 
@@ -622,6 +622,6 @@
   }
 
   #print-preview-toolbar:not(:-moz-lwtheme) {
-    -moz-appearance: -moz-win-browsertabbar-toolbox;
+    apperance: -moz-win-browsertabbar-toolbox;
   }
 }
