--- a/basilisk/themes/windows/downloads/allDownloadsViewOverlay.css
+++ b/basilisk/themes/windows/downloads/allDownloadsViewOverlay.css
@@ -20,7 +20,7 @@
 
 @media (-moz-windows-default-theme) {
   /*
-  -moz-appearance: menuitem is almost right, but the hover effect is not
+  apperance: menuitem is almost right, but the hover effect is not
   transparent and is lighter than desired.
 
   Copied from the autocomplete richlistbox styling in
