--- a/basilisk/themes/linux/preferences/in-content/preferences.css
+++ b/basilisk/themes/linux/preferences/in-content/preferences.css
@@ -6,7 +6,7 @@
 
 .treecol-sortdirection {
   /* override the Linux only toolkit rule */
-  apperance: none;
+  -moz-appearance: none;
 }
 
 .actionsMenu {
