--- a/basilisk/extensions/pdfjs/content/web/viewer.css
+++ b/basilisk/extensions/pdfjs/content/web/viewer.css
@@ -1417,7 +1417,7 @@ html[dir='rtl'] .verticalToolbarSeparator {
 }
 
 .toolbarField.pageNumber {
-  apperance: textfield; /* hides the spinner in moz */
+  -moz-appearance: textfield; /* hides the spinner in moz */
   min-width: 16px;
   text-align: right;
   width: 40px;
