--- a/basilisk/themes/linux/downloads/indicator.css
+++ b/basilisk/themes/linux/downloads/indicator.css
@@ -186,7 +186,7 @@ toolbar[brighttext] #downloads-indicator-counter {
 }
 
 #downloads-indicator-progress > .progress-bar {
-  apperance: none;
+  -moz-appearance: none;
   min-width: 0;
   min-height: 0;
   /* The background-clip: border-box; and background-image: none; are there to expand the background-color behind the border */
@@ -199,7 +199,7 @@ toolbar[brighttext] #downloads-indicator-counter {
 }
 
 #downloads-indicator-progress > .progress-remainder {
-  apperance: none;
+  -moz-appearance: none;
   min-width: 0;
   min-height: 0;
   background-image: linear-gradient(#505050, #575757);
