--- a/basilisk/themes/linux/places/editBookmarkOverlay.css
+++ b/basilisk/themes/linux/places/editBookmarkOverlay.css
@@ -28,11 +28,11 @@
 }
 
 .expander-up > .button-box {
-  apperance: button-arrow-up;
+  -moz-appearance: button-arrow-up;
 }
 
 .expander-down > .button-box {
-  apperance: button-arrow-down;
+  -moz-appearance: button-arrow-down;
 }
 
 #editBookmarkPanelContent {
