--- a/basilisk/themes/linux/webRTC-indicator.css
+++ b/basilisk/themes/linux/webRTC-indicator.css
@@ -11,7 +11,7 @@ window {
 #firefoxButton {
   height: 29px;
   margin: 0;
-  apperance: none;
+  -moz-appearance: none;
   border-style: none;
 }
 
