--- a/basilisk/themes/osx/downloads/indicator.css
+++ b/basilisk/themes/osx/downloads/indicator.css
@@ -218,7 +218,7 @@ toolbar[brighttext] #downloads-button:not([counter])[attention="success"] > #dow
 }
 
 #downloads-indicator-progress > .progress-bar {
-  apperance: none;
+  -moz-appearance: none;
   min-width: 0;
   min-height: 0;
   /* The background-clip: border-box; and background-image: none; are there to expand the background-color behind the border */
@@ -231,7 +231,7 @@ toolbar[brighttext] #downloads-button:not([counter])[attention="success"] > #dow
 }
 
 #downloads-indicator-progress > .progress-remainder {
-  apperance: none;
+  -moz-appearance: none;
   min-width: 0;
   min-height: 0;
   background-image: linear-gradient(#505050, #575757);
