--- a/basilisk/themes/shared/contextmenu.inc.css
+++ b/basilisk/themes/shared/contextmenu.inc.css
@@ -5,7 +5,7 @@
 }
 
 #context-navigation > .menuitem-iconic > .menu-iconic-left {
-  apperance: none;
+  -moz-appearance: none;
 }
 
 #context-navigation > .menuitem-iconic > .menu-iconic-left > .menu-iconic-icon {
