--- a/basilisk/themes/shared/customizableui/customizeMode.inc.css
+++ b/basilisk/themes/shared/customizableui/customizeMode.inc.css
@@ -136,7 +136,7 @@
   color: rgb(71,71,71);
   box-shadow: 0 1px rgba(255, 255, 255, 0.5),
               inset 0 1px rgba(255, 255, 255, 0.5);
-  apperance: none;
+  -moz-appearance: none;
 }
 
 .customizationmode-button > .box-inherit {
@@ -378,7 +378,7 @@ toolbarpaletteitem[place="toolbar"]:not([mousedown="true"]):-moz-focusring {
 }
 
 .customization-lwtheme-menu-theme {
-  apperance: none;
+  -moz-appearance: none;
   border: 1px solid transparent;
   margin: 0 -5px 5px;
   padding-top: 0;
@@ -441,7 +441,7 @@ toolbarpaletteitem[place="toolbar"]:not([mousedown="true"]):-moz-focusring {
 }
 
 .customization-lwtheme-menu-footeritem {
-  apperance: none;
+  -moz-appearance: none;
   -moz-box-flex: 1;
   color: inherit;
   border-style: none;
