--- a/basilisk/themes/shared/urlbarSearchSuggestionsNotification.inc.css
+++ b/basilisk/themes/shared/urlbarSearchSuggestionsNotification.inc.css
@@ -25,7 +25,7 @@
 }
 
 #PopupAutoCompleteRichResult > hbox[anonid="search-suggestions-notification"] > button {
-  apperance: none;
+  -moz-appearance: none;
   min-width: 80px;
   border-radius: 3px;
   padding: 4px 16px;
